syntax = "proto3";

package intentpb;

service IntentRegistry {
    rpc AddIntent(AddIntentRequest) returns (AddIntentReply) {}
    rpc DisableIntent(DisableIntentRequest) returns (DisableIntentReply) {}
    rpc QueryIntents(QueryIntentsRequest) returns (stream Intent) {}
}

message Intent {
    string id = 1;
    string serverId = 2;
    string name = 3;
    string regex = 4;
    bool mention = 5;
    string response = 6;
    string endpoint = 7;
    string help = 8;
    bool enabled = 9;
    int32 created = 10;
}


message QueryIntentsRequest {
    string serverId = 1;
}

message AddIntentRequest {
    Intent intent = 1;
}

message AddIntentReply {
    Intent intent = 1;
}

message DisableIntentRequest {
    string id = 1;
}

message DisableIntentReply {
    string id = 1;
}
