syntax = "proto3";

option go_package = ".;processingpb";
package processingpb;

service Processing {
    rpc SendMessageRequest(MessageRequest) returns (SendMessageRequestReply) {}
    rpc GetMessageReply(MessageReplyRequest) returns (MessageReply) {}
    rpc SendReaction(Reaction) returns (SendReactionReply) {}
    rpc SendProcessingEvent(ProcessingEvent) returns (SendProcessingEventReply) {}
    rpc ProcessingRequestIntentStatistics(ProcessingRequestIntentStatisticsRequest) returns (ProcessingRequestIntentStatisticsReply) {}
}

message MessageReplyReceived {
    string Id = 1;
}

message MessageRequest {
    string id = 1;
    string source = 2;
    User bot = 3;
    User author = 4;
    string channelId = 5;
    string serverId = 6;
    bool isDirect = 7;
    repeated Server servers = 8;
    repeated User mentions = 9;
    string content = 10;
    Application application = 11;
}

message User {
    string id = 1;
    string name = 2;
    string discriminator = 3;
}

message Server {
    string id = 1;
    string name = 2;
    string ownerId = 3;
    string description = 4;
    int32 userCount = 5;
    string iconUrl = 6;
    string systemChannelId = 7;
}

message Application {
    string id = 1;
    string name = 2;
    string description = 3;
    string icon = 4;
    User owner = 5;
}

message Response {
    repeated string messages = 1;
}

message SendMessageRequestReply {
    string id = 1;
}

message MessageReplyRequest {
    string id = 1;
}

message MessageReply {
	string id = 1;
    string processingRequestId = 2;
    string channelId = 3;
    string userId = 4;
    string content = 5;
    int64 created = 6;
}

message ProcessingRequest {
	string id = 1;
    string type = 2;
    string intentId = 3;
    string source = 4;
    string channelId = 5;
    string serverId = 6;
    string botId = 7;
    string userId = 8;
    int64 created = 9;
}

message ProcessingEvent {
	string id = 1;
    string processingRequestId = 2;
    string description = 3;
    string type = 4;
    int64 created = 5;
}

message ProcessingRequestIntentStatisticsRequest {
    string serverId = 1;
    string intentId = 2;
    string userId = 3;
    string type = 4;
    int64 createdGreaterThanOrEqualTo = 5;
    int64 createdLessThanOrEqualTo = 6;
    int32 userLimit = 7;
}

message ProcessingRequestIntentStatisticsReply {
    string intentId = 1;
    repeated UserStatistic userStatistics = 2;
}

message UserStatistic {
    string userId = 1;
    int64 count = 2;
}

message SendProcessingEventReply {}

message Reaction {
    string userId = 1;
    MessageRequest messageRequest = 2;
    Emoji emoji = 3;
    string channelId = 4;
    string serverId = 5;
}

message Emoji {
    string id = 1;
    string name = 2;
    repeated string roles = 3;
    bool managed = 4;
    bool requireColons = 5;
    bool animated = 6;
    bool available = 7;
}

message SendReactionReply {}